--- a/PublicRecordsApp/index.html
+++ b/PublicRecordsApp/index.html
@@ -116,14 +116,19 @@
 
     .hero-grid {
       display: grid;
-      grid-template-columns: minmax(0, 1.2fr) minmax(0, 0.8fr);
+      grid-template-columns: 1fr;
       gap: 2rem;
       align-items: center;
+      justify-items: center;
     }
 
     .hero-copy {
       display: grid;
       gap: 1rem;
+      text-align: center;
+      justify-items: center;
+      max-width: 640px;
+      margin: 0 auto;
     }
 
     .hero-kicker {
@@ -145,6 +150,8 @@
       margin: 0;
       color: rgba(255, 255, 255, 0.78);
       max-width: 560px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .hero-metrics {
@@ -311,6 +318,7 @@
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 26px 70px rgba(12, 18, 28, 0.28);
+      border: 2px solid #ffffff;
       position: relative;
       display: grid;
       grid-template-rows: auto 1fr;
@@ -330,6 +338,24 @@
       margin: 0;
       font-size: 0.85rem;
       letter-spacing: 0.2em;
+      text-transform: uppercase;
+    }
+
+    .modal-actions {
+      display: flex;
+      align-items: center;
+      gap: 0.6rem;
+    }
+
+    .modal-link {
+      border: 1px solid rgba(255, 255, 255, 0.35);
+      border-radius: 999px;
+      padding: 0.35rem 0.85rem;
+      background: rgba(255, 255, 255, 0.1);
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 0.75rem;
+      letter-spacing: 0.12em;
       text-transform: uppercase;
     }
 
@@ -353,10 +379,6 @@
     @media (max-width: 800px) {
       .header-shell {
         padding: 2.2rem 1.4rem 3rem;
-      }
-
-      .hero-grid {
-        grid-template-columns: 1fr;
       }
     }
 
@@ -389,20 +411,6 @@
           <p class="hero-kicker">Software for civic clarity</p>
           <h1 class="hero-title">Public Records Database</h1>
           <p class="hero-lede">Search, preview, and publish public records in seconds. Built for towns, boards, and nonprofits that want a clean, always-accessible archive.</p>
-        </div>
-        <div class="hero-metrics">
-          <div class="metric">
-            <h4>Fast Search</h4>
-            <p>Keyword and year filters that keep archives instantly useful.</p>
-          </div>
-          <div class="metric">
-            <h4>Easy Updates</h4>
-            <p>Add new files without rebuilding or reformatting the site.</p>
-          </div>
-          <div class="metric">
-            <h4>Public Ready</h4>
-            <p>Looks professional on desktop and mobile, out of the box.</p>
-          </div>
         </div>
       </div>
     </div>
@@ -443,7 +451,10 @@
     <div class="modal-card">
       <div class="modal-header">
         <p class="modal-title">Public Example</p>
-        <button class="modal-close" type="button" aria-label="Close preview" data-close-modal>&times;</button>
+        <div class="modal-actions">
+          <a class="modal-link" href="https://www.blyoregon.org/community/minutes/" target="_blank" rel="noopener">Go to site</a>
+          <button class="modal-close" type="button" aria-label="Close preview" data-close-modal>&times;</button>
+        </div>
       </div>
       <iframe class="modal-frame" src="https://www.blyoregon.org/community/minutes/" title="Public Records example"></iframe>
     </div>
