--- a/PublicRecordsApp/demo.html
+++ b/PublicRecordsApp/demo.html
@@ -483,6 +483,18 @@
 
     @media (max-width: 720px) {
       .header-shell { padding: 2.1rem 1.4rem 2.8rem; }
+      .header-top {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .header-logo {
+        justify-content: center;
+        text-align: center;
+      }
+      .header-actions {
+        justify-content: center;
+      }
       main { padding: 2rem 1.2rem 3rem; }
       .section { padding: 1.6rem; }
       .tools { justify-content: center; }
