--- a/PublicRecordsApp/index.html
+++ b/PublicRecordsApp/index.html
@@ -383,9 +383,23 @@
     }
 
     @media (max-width: 700px) {
+      .header-top {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .header-logo {
+        justify-content: center;
+        text-align: center;
+      }
+
+      .header-actions {
+        justify-content: center;
+      }
+
       .container {
-        padding: 0 1.2rem 3rem;
-        margin-top: -2.2rem;
+        padding: 2.8rem 1.2rem 3rem;
       }
       .hero {
         padding: 2rem 1.4rem;
