Refresh site theme and projects page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <nav class="site-nav" aria-label="Site">
   <a href="/index.html">Home</a>
   <a href="/photography/">Photography</a>
-  <a href="/blyoregon/">Bly Oregon</a>
+  <a href="/projects/">Projects</a>
   <a href="/blog/">Blog</a>
-  <a href="/PublicRecordsApp/">Software</a>
   <a href="/contact/">Contact</a>
     <a href="https://shop.quentinnichols.com/" target="_blank" rel="noopener">Shop</a>
 </nav>
@@ -32,10 +31,6 @@
 
         <p class="qjn-hero-body">
           I’m drawn to the small details of life — the landscapes, the stories that came before us, and the creative work happening today. I’m trying to make more room for the things I love, and this site is where I track the projects, photos, and ideas that come out of that.
-        </p>
-
-        <p class="qjn-hero-body">
-          I recently began software development — check out what I have to offer in the <a href="/PublicRecordsApp/">Public Records App</a>.
         </p>
 
         <div class="qjn-hero-actions">
