--- a/contact/index.html
+++ b/contact/index.html
@@ -8,19 +8,18 @@
   <link rel="stylesheet" href="/style.css" />
   <style>
     :root{
-      --bg:#0b0f14;
+      --bg: #f7f4ef;
 
-      /* MORE TRANSPARENT / "belongs on Pixieset" */
-      --panel: rgba(255,255,255,.02);
-      --stroke: rgba(255,255,255,.10);
-      --text:#eef2f7;
-      --muted: rgba(238,242,247,.70);
+      /* light, warm */
+      --panel: rgba(255,255,255,.9);
+      --stroke: rgba(29,34,48,.12);
+      --text: #000000;
+      --muted: rgba(0,0,0,.72);
 
-      /* rows: glassy */
-      --row: rgba(255,255,255,.03);
-      --rowHover: rgba(255,255,255,.055);
+      --row: linear-gradient(135deg, rgba(232,234,238,.95), rgba(222,226,232,.92));
+      --rowHover: linear-gradient(135deg, rgba(222,226,232,.95), rgba(232,234,238,.92));
 
-      --shadow: 0 18px 55px rgba(0,0,0,.45);
+      --shadow: 0 18px 55px rgba(29,34,48,.12);
       --blur: blur(14px);
     }
 
@@ -29,12 +28,12 @@
     body{
       margin:0;
       background:
-        radial-gradient(1200px 900px at 20% -10%, rgba(110,231,183,.08), transparent 60%),
-        radial-gradient(1200px 900px at 100% 0%, rgba(59,130,246,.08), transparent 55%),
-        radial-gradient(1000px 800px at 80% 115%, rgba(168,85,247,.08), transparent 55%),
+        radial-gradient(1200px 900px at 20% -10%, rgba(240,101,67,.12), transparent 60%),
+        radial-gradient(1200px 900px at 100% 0%, rgba(26,124,114,.12), transparent 55%),
+        radial-gradient(1000px 800px at 80% 115%, rgba(250,200,120,.10), transparent 55%),
         var(--bg);
       color:var(--text);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: var(--font-body);
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
@@ -63,8 +62,8 @@
       display:flex;
       gap:12px;
       align-items:center;
-      border-bottom: 1px solid rgba(255,255,255,.08);
-      background: rgba(255,255,255,.02);
+      border-bottom: 1px solid rgba(29,34,48,.08);
+      background: rgba(255,255,255,.7);
       backdrop-filter: var(--blur);
       -webkit-backdrop-filter: var(--blur);
     }
@@ -74,10 +73,10 @@
       height:56px;
       border-radius: 16px;
       overflow:hidden;
-      border: 1px solid rgba(255,255,255,.14);
-      background: rgba(255,255,255,.03);
+      border: 1px solid rgba(29,34,48,.12);
+      background: rgba(255,255,255,.9);
       flex: 0 0 auto;
-      box-shadow: 0 10px 22px rgba(0,0,0,.28);
+      box-shadow: 0 10px 22px rgba(29,34,48,.18);
     }
 
     .avatar img{
@@ -113,7 +112,7 @@
       justify-content:space-between;
       gap:10px;
       padding: 6px 6px 8px;
-      color: rgba(238,242,247,.92);
+      color: #000000;
     }
 
     .sectionHead .name{
@@ -142,7 +141,7 @@
       gap: 12px;
       padding: 12px 12px;
       border-radius: 16px;
-      border: 1px solid rgba(255,255,255,.10);
+      border: 1px solid rgba(29,34,48,.12);
       background: var(--row);
       transition: transform .08s ease, border-color .18s ease, background .18s ease;
       backdrop-filter: var(--blur);
@@ -151,7 +150,7 @@
 
     a.row:hover, button.rowBtn:hover{
       transform: translateY(-1px);
-      border-color: rgba(255,255,255,.22);
+      border-color: rgba(29,34,48,.3);
       background: var(--rowHover);
     }
 
@@ -163,8 +162,8 @@
       display:grid;
       place-items:center;
       flex: 0 0 auto;
-      border: 1px solid rgba(255,255,255,.12);
-      background: rgba(255,255,255,.04);
+      border: 1px solid rgba(29,34,48,.18);
+      background: linear-gradient(135deg, #d6dbe2, #eef1f5);
       backdrop-filter: var(--blur);
       -webkit-backdrop-filter: var(--blur);
     }
@@ -173,16 +172,16 @@
       width:22px;
       height:22px;
       display:block;
-      filter: drop-shadow(0 3px 12px rgba(0,0,0,.30));
+      filter: drop-shadow(0 3px 8px rgba(0,0,0,.18));
     }
 
     .iconMail{
-      background: radial-gradient(26px 26px at 30% 25%, rgba(96,165,250,.22), rgba(255,255,255,.03));
+      background: radial-gradient(26px 26px at 30% 25%, rgba(96,165,250,.22), rgba(255,255,255,.7));
       border: 1px solid rgba(96,165,250,.18);
     }
 
     .iconPhone{
-      background: radial-gradient(26px 26px at 30% 25%, rgba(34,197,94,.20), rgba(255,255,255,.03));
+      background: radial-gradient(26px 26px at 30% 25%, rgba(34,197,94,.20), rgba(255,255,255,.7));
       border: 1px solid rgba(34,197,94,.16);
     }
 
@@ -230,13 +229,13 @@
     button.rowBtn{
       width:100%;
       cursor:pointer;
-      border: 1px solid rgba(255,255,255,.14);
+      border: 1px solid rgba(29,34,48,.16);
     }
 
     /* subtle divider between personal + org */
     .divider{
       margin: 14px 6px 6px;
-      border-top: 1px solid rgba(255,255,255,.08);
+      border-top: 1px solid rgba(29,34,48,.12);
       opacity:.9;
     }
 
@@ -258,7 +257,7 @@
   <nav class="site-nav" aria-label="Site">
     <a href="/index.html">Home</a>
     <a href="/photography/">Photography</a>
-    <a href="/blyoregon/">Bly Oregon</a>
+    <a href="/projects/">Projects</a>
     <a href="/blog/">Blog</a>
     <a href="https://shop.quentinnichols.com/" target="_blank" rel="noopener">Shop</a>
     <a href="/contact/">Contact</a>
