Improve mobile responsiveness

--- a/PublicRecordsApp/demo.html
+++ b/PublicRecordsApp/demo.html
@@ -498,6 +498,15 @@
       main { padding: 2rem 1.2rem 3rem; }
       .section { padding: 1.6rem; }
       .tools { justify-content: center; }
+      .select,
+      .search {
+        min-width: 0;
+        width: 100%;
+      }
+      .button {
+        width: 100%;
+        justify-content: center;
+      }
       .minute-grid { grid-template-columns: 1fr; }
       .modal-actions { width: 100%; justify-content: center; }
     }
