--- a/PublicRecordsApp/index.html
+++ b/PublicRecordsApp/index.html
@@ -404,6 +404,17 @@
       .hero {
         padding: 2rem 1.4rem;
       }
+      .cta-row {
+        flex-direction: column;
+        width: 100%;
+      }
+      .cta {
+        width: 100%;
+      }
+      .modal-actions {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
     }
   </style>
 </head>
