--- a/projects/index.html
+++ b/projects/index.html
@@ -15,12 +15,12 @@
     }
 
     .bly-stage {
-      padding: 18px 0 56px;
+      padding: var(--nav-content-pad) 0 56px;
     }
 
     /* ===== Bly Section ===== */
     .bly-wrap {
-      padding: 70px 20px 50px;
+      padding: 0 20px 50px;
       background: transparent;
       color: inherit;
       font-family: var(--font-body);
