--- a/contact/index.html
+++ b/contact/index.html
@@ -42,7 +42,7 @@
       min-height:100vh;
       display:flex;
       justify-content:center;
-      padding: 18px 12px 22px;
+      padding: var(--nav-content-pad) 12px 22px;
     }
 
     .wrap{ width:min(720px, 100%); }
@@ -241,7 +241,7 @@
 
     /* tighten on small phones */
     @media (max-width: 420px){
-      .page{ padding: 14px 10px 18px; }
+      .page{ padding: calc(var(--nav-content-pad) - 10px) 10px 18px; }
       .content{ padding: 8px 8px 12px; }
       .top{ padding: 12px 12px 10px; }
       .avatar{ width:52px; height:52px; border-radius: 15px; }
