Refine page headers and blog filters

--- a/Tiktok/index.html
+++ b/Tiktok/index.html
@@ -34,9 +34,10 @@
   <main class="tiktok-main">
     <section class="tiktok-hero" aria-labelledby="tiktok-title">
       <div class="tiktok-hero-inner">
-        <p class="tiktok-kicker">TikTok Shop</p>
-        <h1 id="tiktok-title" class="tiktok-title">Quentin's TikTok Showcase</h1>
-        <p class="tiktok-subtitle">Best deals on ALL products — curated picks, creator favorites, and limited drops.</p>
+      <header class="page-head">
+        <h1 id="tiktok-title" class="page-title">TikTok</h1>
+              </header>
+      <p class="tiktok-subtitle">Best deals on ALL products — curated picks, creator favorites, and limited drops.</p>
         <div class="tiktok-stats">
           <div class="tiktok-stat">
             <span class="tiktok-stat-value">Live</span>
