--- a/photography/index.html
+++ b/photography/index.html
@@ -36,13 +36,12 @@
       <div class="qjn-inner">
         <header class="qjn-head">
           <div class="qjn-head-text">
-            <p class="qjn-kicker">Photography</p>
-            <h1 id="qjn-title">Browse QJN Photography</h1>
-            <p class="qjn-sub">
-              Explore ongoing bodies of work, fine-art highlights, and booking options.
-            </p>
-          </div>
+            <h1 id="qjn-title" class="page-title">Photography</h1>
+                      </div>
         </header>
+        <p class="qjn-sub">
+          Explore ongoing bodies of work, fine-art highlights, and booking options.
+        </p>
 
         <section class="qjn-collection-grid" aria-label="Photography collections">
           <a class="qjn-collection-card qjn-collection-card--gallery"
