--- a/projects/index.html
+++ b/projects/index.html
@@ -40,9 +40,9 @@
 
     .bly-sub {
       margin: 0 0 34px;
-      font-size: 12px;
-      color: var(--muted);
-      letter-spacing: 0.28em;
+      font-size: 11px;
+      color: var(--accent);
+      letter-spacing: 0.24em;
       text-transform: uppercase;
     }
 
@@ -163,9 +163,9 @@
       <div class="bly-inner">
 
         <!-- Heading -->
-        <header class="bly-head">
-          <h2 class="bly-title">Projects</h2>
-          <p class="bly-sub">Maintained by Quentin Nichols</p>
+        <header class="page-head">
+          <h1 class="page-title">Projects</h1>
+          <p class="page-sub">Maintained by Quentin Nichols</p>
         </header>
 
         <!-- Feature Cards -->
