--- a/contact/index.html
+++ b/contact/index.html
@@ -41,6 +41,10 @@
       padding: var(--nav-content-pad) 12px 22px;
     }
 
+    .page-head{
+      margin: 6px auto 12px;
+    }
+
     .wrap{ width:min(720px, 100%); }
 
     .panel{
@@ -273,6 +277,9 @@
     <div class="nav-spacer" aria-hidden="true"></div>
   </div>
 </nav>
+  <header class="page-head">
+    <h1 class="page-title">Contact</h1>
+      </header>
   <div class="page">
     <main class="wrap">
       <section class="panel">
