Update homepage and navigation

--- a/index.html
+++ b/index.html
@@ -66,6 +66,59 @@
     </div>
   </section>
 
+  <!-- ===== QJN · About & Context ===== -->
+  <section class="qjn-about" id="about">
+    <div class="qjn-about-inner">
+      <div class="qjn-about-text">
+        <p class="qjn-about-kicker">About</p>
+        <h2 class="qjn-about-title">Rooted in rural Oregon, telling stories with a camera, a notebook, and a steady hand in the community.</h2>
+        <p class="qjn-about-body">
+          When I’m not photographing or writing, I manage the Ruth Obenchain Recreation Center and serve as a lieutenant with Bly Fire. The work is local and practical, and it shapes how I document people and place.
+        </p>
+        <p class="qjn-about-body">
+          You’ll find long-form reflections in the blog, ongoing bodies of photographic work, and community-focused projects like the Bly, Oregon site and the Public Records App.
+        </p>
+      </div>
+
+      <div class="qjn-about-cards" aria-label="Highlighted work">
+        <article class="qjn-about-card">
+          <h3 class="qjn-about-card-title">Community Projects</h3>
+          <p class="qjn-about-card-text">
+            Keeping local institutions visible and useful, from recreation to public records.
+          </p>
+          <div class="qjn-about-card-links">
+            <a href="https://ruthobenchainrc.com" target="_blank" rel="noopener">RORC</a>
+            <a href="https://www.blyoregon.org" target="_blank" rel="noopener">Bly Oregon</a>
+            <a href="/PublicRecordsApp/">Public Records App</a>
+          </div>
+        </article>
+
+        <article class="qjn-about-card">
+          <h3 class="qjn-about-card-title">Writing & Reflection</h3>
+          <p class="qjn-about-card-text">
+            Personal essays, book reflections, and the ideas shaping how I see the world.
+          </p>
+          <div class="qjn-about-card-links">
+            <a href="/blog/">Read the blog</a>
+            <a href="/blog/recent-reads/">Recent reads</a>
+          </div>
+        </article>
+
+        <article class="qjn-about-card">
+          <h3 class="qjn-about-card-title">Photo & Film</h3>
+          <p class="qjn-about-card-text">
+            Ongoing bodies of work, portraits, and small documentaries for the people and landscapes I know.
+          </p>
+          <div class="qjn-about-card-links">
+            <a href="/photography/">View collections</a>
+            <a href="https://www.youtube.com/@quentin.j.nichols" target="_blank" rel="noopener">YouTube</a>
+            <a href="https://gallery.quentinnichols.com/" target="_blank" rel="noopener">Print gallery</a>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
   <!-- ===== QJN · Recent Videos (Minimal, Transparent, White Text) ===== -->
   <section class="qjn-yt-min" id="recent-videos">
     <div class="qjn-yt-min-inner">
@@ -104,5 +157,6 @@
   </section>
 </main>
 
+  <script src="/assets/nav.js"></script>
 </body>
 </html>
