Update about page and homepage copy

--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
         <h1 class="qjn-hero-title">Hey, I’m Quentin</h1>
 
         <p class="qjn-hero-body qjn-hero-intro">
-          Quentin Nichols — photographer, writer, and documentarian based in Oregon.
-        </p>
-
-        <p class="qjn-hero-body">
           I’m drawn to the small details of life — the landscapes, the stories that came before us, and the creative work happening today. I’m trying to make more room for the things I love, and this site is where I track the projects, photos, and ideas that come out of that.
         </p>
 
         <div class="qjn-hero-actions">
-          <a href="https://www.quentinnichols.com/about-me/" class="qjn-hero-btn-main">About me</a>
+          <a href="/about-me/" class="qjn-hero-btn-main">About me</a>
           <a href="/contact/" class="qjn-hero-btn-link">Contact</a>
         </div>
+
       </div>
 
       <!-- RIGHT: PHOTO -->
@@ -71,13 +68,16 @@
     <div class="qjn-about-inner">
       <div class="qjn-about-text">
         <p class="qjn-about-kicker">About</p>
-        <h2 class="qjn-about-title">Rooted in rural Oregon, telling stories with a camera, a notebook, and a steady hand in the community.</h2>
+        <h2 class="qjn-about-title">Rooted in rural Oregon, building community spaces and documenting the people who keep them going.</h2>
         <p class="qjn-about-body">
-          When I’m not photographing or writing, I manage the Ruth Obenchain Recreation Center and serve as a lieutenant with Bly Fire. The work is local and practical, and it shapes how I document people and place.
+          I started restoring an old high school gym at 15, and it became the Ruth Obenchain Recreation Center. Since then, I’ve handled memberships, events, and ongoing restoration while keeping a record of the place and the people around me.
         </p>
         <p class="qjn-about-body">
-          You’ll find long-form reflections in the blog, ongoing bodies of photographic work, and community-focused projects like the Bly, Oregon site and the Public Records App.
+          The rest of my story includes line clearance tree trimming, EMT and firefighter training, travel, and caregiving. The full timeline is collected on the About page.
         </p>
+        <div class="qjn-about-links">
+          <a class="qjn-about-pill" href="/about-me/">Read the full story</a>
+        </div>
       </div>
 
       <div class="qjn-about-cards" aria-label="Highlighted work">
