Add about page galleries and carousels

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -36,7 +36,7 @@
     <div class="qjn-inner">
       <header class="qjn-head">
         <div class="qjn-head-text">
-          <h1 id="about-title" class="page-title">Quentin Nichols — Professional &amp; Life Overview</h1>
+          <h1 id="about-title" class="page-title">Quentin Nichols Professional &amp; Life Overview</h1>
         </div>
       </header>
 
@@ -56,8 +56,26 @@
           </article>
 
           <article class="about-item">
-            <p class="about-item-role">Wildland Firefighting Guard School (Completed)</p>
+            <p class="about-item-role">Wildland Firefighting Guard School</p>
             <p class="about-item-body">I completed the Wildland Firefighting Guard School, which is required to become a wildland firefighter. I chose not to pursue firefighting as a full-time career at that time.</p>
+            <a class="about-carousel-link" href="/about-me/guard-school/" aria-label="Open guard school photo gallery">
+              <div class="about-carousel" data-carousel aria-label="Wildland firefighting guard school photos">
+                <div class="about-carousel-track">
+                  <img
+                    src="/assets/Guard%20School/guardschool1.jpg"
+                    alt="Wildland firefighting guard school training"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <img
+                    src="/assets/Guard%20School/guardschool2.jpg"
+                    alt="Wildland firefighting guard school training"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                </div>
+              </div>
+            </a>
           </article>
 
           <article class="about-item">
@@ -69,6 +87,18 @@
             <p class="about-item-body">As COVID began to emerge globally, I made the decision to return to the United States, unsure whether waiting longer would leave me unable to get home.</p>
             <p class="about-item-body">When I landed in Reno, Nevada, I got off the plane and went to get into an Uber, assuming life continued on the same way it had in New Zealand. I attempted to hop into the passenger seat so I could have a conversation with the driver, but before I even got in, he took me aside. He handed me a mask, squirted hand sanitizer into my hand, and told me I needed to sit in the back seat.</p>
             <p class="about-item-body">It was a shock. In New Zealand, masks weren’t being worn and it didn’t feel like a major concern. I was also expecting my family and I would go out to eat dinner that night, and that wasn’t an option either. It was a complete shift, and suddenly I was back home with no clear plan.</p>
+<a class="about-carousel-link" href="/about-me/new-zealand/" aria-label="Open New Zealand photo gallery">
+              <div class="about-carousel" data-carousel aria-label="New Zealand travel photos">
+                <div class="about-carousel-track">
+                  <img src="/assets/New%20Zealand%20Photos/FB_IMG_1567919489117.jpg" alt="New Zealand photo 1" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20190927_144821.jpg" alt="New Zealand photo 2" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20190929_181430.jpg" alt="New Zealand photo 3" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191016_151609.jpg" alt="New Zealand photo 4" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191022_182810.jpg" alt="New Zealand photo 5" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191022_184136.jpg" alt="New Zealand photo 6" loading="lazy" decoding="async" />
+                </div>
+              </div>
+            </a>
           </article>
 
           <article class="about-item">
@@ -100,7 +130,8 @@
                 <p class="about-subitem-org">New Zealand</p>
                 <p class="about-subitem-body">In October, I returned to New Zealand to attend Nicole’s wedding. While there, I visited Asplundh’s headquarters in Auckland and toured the facility to gain a better understanding of what an opportunity with the company might look like.</p>
                 <p class="about-subitem-body">After returning home, I took time to consider my options. During that period, several factors at home changed, and I ultimately decided not to return to New Zealand to work for Asplundh.</p>
-                <p class="about-subitem-body">Eventually, I reached a point where I needed income and wasn’t motivated enough to figure something else out. I gave up on forcing direction and planned to return to work at Trees.</p>
+                <p class="about-subitem-body">Eventually, I reached a point where I needed income and wasn’t motivated enough to figure something else out. I gave up on forcing direction and planned to return to work at Trees.
+            </p>
               </div>
             </div>
           </article>
@@ -184,5 +215,6 @@
 </main>
 
 <script src="/assets/nav.js"></script>
+<script src="/assets/carousels.js"></script>
 </body>
 </html>
