Add new posts and update about content

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -49,8 +49,8 @@
         <h2 id="about-timeline" class="about-section-title">Timeline</h2>
         <div class="about-timeline">
           <article class="about-item">
-            <p class="about-item-role">Project Manager / CEO</p>
-            <p class="about-item-org">Bly Community Action Team, Inc.</p>
+            <p class="about-item-role">Project Manager</p>
+            <p class="about-item-org">Ruth Obenchain Recreation Center (formerly the Gearhart Gym)</p>
             <p class="about-item-dates">Aug 2016 – Present</p>
             <p class="about-item-body">As Project Manager and CEO, I have overseen the long-term restoration and operation of the Ruth Obenchain Recreation Center. This includes coordinating volunteers, managing memberships, organizing events, and guiding both current and future improvement projects. What started as a restoration effort has become a long-term commitment to maintaining and growing a space for the Bly community.</p>
           </article>
@@ -59,7 +59,7 @@
             <p class="about-item-role">Wildland Firefighting Guard School</p>
             <p class="about-item-body">I completed the Wildland Firefighting Guard School, which is required to become a wildland firefighter. I chose not to pursue firefighting as a full-time career at that time.</p>
             <a class="about-carousel-link" href="/about-me/guard-school/" aria-label="Open guard school photo gallery">
-              <div class="about-carousel" data-carousel aria-label="Wildland firefighting guard school photos">
+              <div class="about-carousel" data-carousel data-interval="10000" aria-label="Wildland firefighting guard school photos">
                 <div class="about-carousel-track">
                   <img
                     src="/assets/Guard%20School/guardschool1.jpg"
@@ -87,17 +87,25 @@
             <p class="about-item-body">As COVID began to emerge globally, I made the decision to return to the United States, unsure whether waiting longer would leave me unable to get home.</p>
             <p class="about-item-body">When I landed in Reno, Nevada, I got off the plane and went to get into an Uber, assuming life continued on the same way it had in New Zealand. I attempted to hop into the passenger seat so I could have a conversation with the driver, but before I even got in, he took me aside. He handed me a mask, squirted hand sanitizer into my hand, and told me I needed to sit in the back seat.</p>
             <p class="about-item-body">It was a shock. In New Zealand, masks weren’t being worn and it didn’t feel like a major concern. I was also expecting my family and I would go out to eat dinner that night, and that wasn’t an option either. It was a complete shift, and suddenly I was back home with no clear plan.</p>
-<a class="about-carousel-link" href="/about-me/new-zealand/" aria-label="Open New Zealand photo gallery">
+                        <a class="about-carousel-link" href="/about-me/new-zealand/" aria-label="Open New Zealand photo gallery">
               <div class="about-carousel" data-carousel aria-label="New Zealand travel photos">
                 <div class="about-carousel-track">
-                  <img src="/assets/New%20Zealand%20Photos/FB_IMG_1567919489117.jpg" alt="New Zealand photo 1" loading="lazy" decoding="async" />
-                  <img src="/assets/New%20Zealand%20Photos/IMG_20190927_144821.jpg" alt="New Zealand photo 2" loading="lazy" decoding="async" />
-                  <img src="/assets/New%20Zealand%20Photos/IMG_20190929_181430.jpg" alt="New Zealand photo 3" loading="lazy" decoding="async" />
-                  <img src="/assets/New%20Zealand%20Photos/IMG_20191016_151609.jpg" alt="New Zealand photo 4" loading="lazy" decoding="async" />
-                  <img src="/assets/New%20Zealand%20Photos/IMG_20191022_182810.jpg" alt="New Zealand photo 5" loading="lazy" decoding="async" />
-                  <img src="/assets/New%20Zealand%20Photos/IMG_20191022_184136.jpg" alt="New Zealand photo 6" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/PSX_20191001_184951.jpg" alt="New Zealand photo 1" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/PSX_20191128_194942.jpg" alt="New Zealand photo 2" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/PSX_20191001_184802.jpg" alt="New Zealand photo 3" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/_CX07869.JPG" alt="New Zealand photo 4" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191023_133334.jpg" alt="New Zealand photo 5" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191104_124912.jpg" alt="New Zealand photo 6" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191110_125357.jpg" alt="New Zealand photo 7" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191129_112005.jpg" alt="New Zealand photo 8" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191214_103754.jpg" alt="New Zealand photo 9" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20191216_095538.jpg" alt="New Zealand photo 10" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20200115_163231.jpg" alt="New Zealand photo 11" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20200201_135908.jpg" alt="New Zealand photo 12" loading="lazy" decoding="async" />
+                  <img src="/assets/New%20Zealand%20Photos/IMG_20200211_083614.jpg" alt="New Zealand photo 13" loading="lazy" decoding="async" />
                 </div>
               </div>
+              <span class="about-carousel-caption">Click to view the full New Zealand gallery.</span>
             </a>
           </article>
 
