--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <div class="qjn-about-inner">
       <div class="qjn-about-text">
         <p class="qjn-about-kicker">About</p>
-        <h2 class="qjn-about-title">Rooted in rural Oregon, building community spaces and documenting the people who keep them going.</h2>
+        <h2 class="qjn-about-title">Rooted in rural Oregon, shaped by work, travel, and the people who taught me how to pay attention.</h2>
         <p class="qjn-about-body">
-          I started restoring an old high school gym at 15, and it became the Ruth Obenchain Recreation Center. Since then, I’ve handled memberships, events, and ongoing restoration while keeping a record of the place and the people around me.
+          My path has moved through line clearance tree trimming, EMT and firefighter training, caregiving, and long stretches of community work — all of it feeding the way I see and document the world.
         </p>
         <p class="qjn-about-body">
-          The rest of my story includes line clearance tree trimming, EMT and firefighter training, travel, and caregiving. The full timeline is collected on the About page.
+          If you want the full timeline and context, it’s on the About page.
         </p>
         <div class="qjn-about-links">
           <a class="qjn-about-pill" href="/about-me/">Read the full story</a>
