Center homepage section cards

--- a/index.html
+++ b/index.html
@@ -80,39 +80,34 @@
         </div>
       </div>
 
-      <div class="qjn-about-cards" aria-label="Highlighted work">
+      <div class="qjn-about-cards" aria-label="Site sections">
         <article class="qjn-about-card">
-          <h3 class="qjn-about-card-title">Community Projects</h3>
+          <h3 class="qjn-about-card-title">Photography</h3>
           <p class="qjn-about-card-text">
-            Keeping local institutions visible and useful, from recreation to public records.
+            Ongoing bodies of work, portraits, and documentary projects from the places and people I know.
           </p>
           <div class="qjn-about-card-links">
-            <a href="https://ruthobenchainrc.com" target="_blank" rel="noopener">RORC</a>
-            <a href="https://www.blyoregon.org" target="_blank" rel="noopener">Bly Oregon</a>
-            <a href="/PublicRecordsApp/">Public Records App</a>
+            <a href="/photography/">View photography</a>
           </div>
         </article>
 
         <article class="qjn-about-card">
-          <h3 class="qjn-about-card-title">Writing & Reflection</h3>
+          <h3 class="qjn-about-card-title">Blog</h3>
           <p class="qjn-about-card-text">
-            Personal essays, book reflections, and the ideas shaping how I see the world.
+            Longer reflections, field notes, and the stories behind what I’m making and learning.
           </p>
           <div class="qjn-about-card-links">
             <a href="/blog/">Read the blog</a>
-            <a href="/blog/recent-reads/">Recent reads</a>
           </div>
         </article>
 
         <article class="qjn-about-card">
-          <h3 class="qjn-about-card-title">Photo & Film</h3>
+          <h3 class="qjn-about-card-title">Community Projects</h3>
           <p class="qjn-about-card-text">
-            Ongoing bodies of work, portraits, and small documentaries for the people and landscapes I know.
+            Local initiatives that keep small-town institutions visible and useful.
           </p>
           <div class="qjn-about-card-links">
-            <a href="/photography/">View collections</a>
-            <a href="https://www.youtube.com/@quentin.j.nichols" target="_blank" rel="noopener">YouTube</a>
-            <a href="https://gallery.quentinnichols.com/" target="_blank" rel="noopener">Print gallery</a>
+            <a href="/projects/">View projects</a>
           </div>
         </article>
       </div>
