--- a/about-me/index.html
+++ b/about-me/index.html
@@ -42,7 +42,8 @@
 
       <section class="about-section" aria-labelledby="about-intro">
         <h2 id="about-intro" class="about-section-title">Overview</h2>
-        <p class="about-body">This page traces the work and life chapters that shaped me: restoring the Ruth Obenchain Recreation Center, years in line clearance tree trimming, EMT and firefighter training, travel and caregiving, and a steady return to community-focused responsibility.</p>
+        <p class="about-body">Growing up in the close-knit community of Bly, Oregon, I developed a deep, lifelong connection to my hometown. My passion for writing, photography, and videography was sparked by a desire to capture and preserve meaningful moments.</p>
+        <p class="about-body">From restoring a local gym to working abroad in New Zealand, and serving my community as a firefighter, each of these moments has taught me invaluable lessons about resilience, compassion, and the power of hard work. Each experience, and every person who has been a part of my journey, has equally contributed to who I am today.</p>
       </section>
 
       <section class="about-section" aria-labelledby="about-timeline">
@@ -114,14 +115,15 @@
             <p class="about-item-org">Trees, LLC</p>
             <p class="about-item-dates">Jun 2020 – Aug 2022</p>
             <p class="about-item-body">In June 2020, I started an apprenticeship with Trees, LLC, which was initially a blast. My older brother Luke taught me much of what I needed to know, along with my foreman at the time, Shiloh. We worked hard and genuinely had a good time.</p>
-            <p class="about-item-body">Around this time, tree trimming no longer felt rewarding. It was just a paycheck, and I’ve always been excited to learn new things. Doing the same task daily drained the excitement I had experienced elsewhere.</p>
+            <p class="about-item-body">Towards the end of my apprenticeship, tree trimming no longer felt rewarding. It was just a paycheck, and I’ve always been excited to learn new things. Doing the same task daily drained the excitement I had experienced elsewhere.</p>
           </article>
 
           <article class="about-item">
             <p class="about-item-role">Emergency Medical Technician</p>
             <p class="about-item-org">Klamath Community College</p>
             <p class="about-item-dates">Sep 2021 – Mar 2022</p>
-            <p class="about-item-body">During my apprenticeship, I enrolled in an EMT program at Klamath Community College, attending classes after work from 5:00–9:00 PM on Mondays and Wednesdays, and 7:00–9:00 PM on Fridays.</p>
+            <p class="about-item-body">During my apprenticeship, I enrolled in the EMT program at Klamath Community College, attending classes after work from 5:00–9:00 PM on Mondays and Wednesdays, and 7:00–9:00 PM on Fridays.</p>
+            <p class="about-item-body">Inspired by my family’s volunteer spirit and my own experiences, I pursued emergency medical training as a way to give back to the community that had given me so much. The program reinforced my interest in service-oriented work and deepened my respect for the responsibility involved in caring for others during critical moments.</p>
           </article>
 
           <article class="about-item about-item--group">
@@ -215,6 +217,13 @@
             <p class="about-item-body">I don’t really know what that means yet. Was I a good employee, a bad employee, someone with unorganized ambition, or something else entirely? I’m not sure. What I do know is that I feel like I’m finally getting my life on track, and I’m genuinely excited for what’s ahead.</p>
             <p class="about-item-body">That’s where a website like this helps — it gives me a place to share my story, reflect on it honestly, and build forward from here. Hopefully, everything above represents the struggle of trying to find myself.</p>
             <p class="about-item-body">I have friends who worked extremely hard to pay off their houses financially. Maybe I’ve done something similar, but through practical life experience instead. I don’t know yet. We’ll see what happens.</p>
+          </article>
+
+          <article class="about-item">
+            <p class="about-item-role">A Reminder from an Earlier Season</p>
+            <p class="about-quote">“We are born with the gift of not knowing, to delight in learning life’s simple joys. Our bodies bear the price of adventure, and sleep, our return to essence.”</p>
+            <p class="about-quote-signature">— Quentin Nichols</p>
+            <p class="about-item-body">That line emerged during a period when my writing — and my website as a whole — was shaped by grief, reflection, and a deep engagement with philosophy, faith, and the nature of existence. At the time, I wrote openly and vulnerably because I was actively processing loss, meaning, and responsibility in real time. Looking back, that philosophy hasn’t disappeared; it has simply been absorbed. What once needed expression has become part of my internal framework, now carried quietly within the broader arc of my life story rather than spoken outright.</p>
           </article>
         </div>
       </section>
