Update about page media and homepage copy

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -54,6 +54,21 @@
             <p class="about-item-org">Ruth Obenchain Recreation Center (formerly the Gearhart Gym)</p>
             <p class="about-item-dates">Aug 2016 – Present</p>
             <p class="about-item-body">As Project Manager and CEO, I have overseen the long-term restoration and operation of the Ruth Obenchain Recreation Center. This includes coordinating volunteers, managing memberships, organizing events, and guiding both current and future improvement projects. What started as a restoration effort has become a long-term commitment to maintaining and growing a space for the Bly community.</p>
+            <p class="about-item-body"><a href="https://www.ruthobenchainrc.com/about-rorc/" target="_blank" rel="noopener">Ruth Obenchain Recreation Center Website (Learn More)</a></p>
+            <a class="about-carousel-link" href="/about-me/rorc/" aria-label="Open Ruth Obenchain Recreation Center gallery">
+              <div class="about-carousel" data-carousel aria-label="Ruth Obenchain Recreation Center photos">
+                <div class="about-carousel-track">
+                <img src="/assets/RORC%20Era/QN2.png" alt="Ruth Obenchain Recreation Center photo 1" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/QN3.png" alt="Ruth Obenchain Recreation Center photo 2" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/QN4.png" alt="Ruth Obenchain Recreation Center photo 3" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/QN5.png" alt="Ruth Obenchain Recreation Center photo 4" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/QN6.png" alt="Ruth Obenchain Recreation Center photo 5" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/QNat15.png" alt="Ruth Obenchain Recreation Center photo 6" loading="lazy" decoding="async" />
+                <img src="/assets/RORC%20Era/Qn7.png" alt="Ruth Obenchain Recreation Center photo 7" loading="lazy" decoding="async" />
+                </div>
+              </div>
+              <span class="about-carousel-caption">Click to view the full RORC gallery.</span>
+            </a>
           </article>
 
           <article class="about-item">
