--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="qjn-about-inner">
       <div class="qjn-about-text">
         <p class="qjn-about-kicker">About</p>
-        <h2 class="qjn-about-title">Rooted in rural Oregon, shaped by work, travel, and the people who taught me how to pay attention.</h2>
+        <h2 class="qjn-about-title">Rooted in rural Oregon, and shaped by life experience.</h2>
         <p class="qjn-about-body">
           My path has moved through line clearance tree trimming, EMT and firefighter training, caregiving, and long stretches of community work — all of it feeding the way I see and document the world.
         </p>
